SQOOP-2474: Fix the problem in the integration test case Derby1_99_4UpgradeTest
(Colin Ma via Jarek Jarcec Cecho)